Fix bug with text overflowing to the right

--- a/src/popup/assets/sass/_link-item.sass
+++ b/src/popup/assets/sass/_link-item.sass
@@ -53,6 +53,9 @@
         width: 220px
         min-width: 0
 
+        span
+            font-size: .8rem
+
         span,
         small
             display: block
